@@ -24,9 +24,6 @@ distributions {
 
 def extraJvmArgs = [
         '-server',
-        '-XX:+UseG1GC',
-        '-XX:MaxGCPauseMillis=100',
-        '-XX:+UseStringDeduplication',
         '-XshowSettings:vm',
 ]
 
@@ -38,7 +35,14 @@ if (!hasProperty('excludeHotspotImpl')) {
     dependencies {
         runtimeOnly project(':hotspot-impl')
     }
-    extraJvmArgs += ['--add-opens', 'java.management/sun.management=ALL-UNNAMED']
+    extraJvmArgs += ['--add-exports', 'java.management/sun.management=ALL-UNNAMED']
+}
+
+if (!hasProperty('excludeClockImpl')) {
+    dependencies {
+        runtimeOnly project(':clock-impl')
+    }
+    extraJvmArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED']
 }
 
 if (hasProperty('devCerts') || hasProperty('devMTLS')) {
@@ -65,9 +69,19 @@ if (hasProperty('gcApplication')) {
     extraJvmArgs += ['-Dio.deephaven.app.GcApplication.enabled=true']
 }
 
+if (hasProperty('quiet')) {
+    extraJvmArgs += ['-Ddeephaven.quiet=true']
+}
+
 tasks.withType(JavaExec).configureEach {
     // This appends to the existing jvm args, so that java-open-nio still takes effect
     jvmArgs extraJvmArgs
+
+    jvmArgs '-XX:+UseG1GC',
+            '-XX:MaxGCPauseMillis=100',
+            '-XX:+UseStringDeduplication',
+            // For development in this repository via Gradle, use the top-level data directory
+            "-Dstorage.path=${rootDir}/data"
 }
 
 tasks.withType(CreateStartScripts).configureEach {
